fix bug where cropped images were resized instead of cropped

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -247,6 +247,7 @@
 
     > img {
       height: 320px;
+      max-width: none;
       filter: brightness(75%);
     }
 
